--- a/vignettes/intro.Rmd
+++ b/vignettes/intro.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Introduction"
+title: "Introduction to flashier"
 author: "Jason Willwerscheid"
 date: "11/29/2018"
 output: rmarkdown::html_vignette
