--- a/vignettes/advanced.Rmd
+++ b/vignettes/advanced.Rmd
@@ -8,57 +8,35 @@ vignette: >
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
-
+  
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo= TRUE, collapse = TRUE, comment = "#>",
-                      fig.width = 6, fig.height = 6)
-devtools::load_all("~/Github/flashier")
+knitr::opts_chunk$set(echo = TRUE, collapse = TRUE, comment = "#>",
+                      warning = FALSE, fig.width = 6, fig.height = 6)
+library(flashier)
 ```
-
+  
 The main `flashier` function is essentially a wrapper for the `flash.workhorse` function, which has a few dozen additional parameters that make the fitting process highly customizable. The purpose of this vignette is to give a tour of these options. Be forewarned: many of them are experimental and have not been exhaustively tested.
-
-
-## Passing additional parameters to `ashr` and `ebnm`
-
-At present, the default setting in `ashr` uses an interior point method to solve the Empirical Bayes normal means problem. The method is robust, but is slower than `mixsqp`, a fast sequential quadratic programming method that was more recently developed to estimate mixture proportions. `flashier` can take advantage of this speedup via the following call. (Proceed with caution: there are some scenarios in which
-`mixsqp` can be rather fragile.)
-
-```{r mixsqp}
-data(gtex)
-mixSQP.time <- system.time(
-  gtex.mixsqp <- flashier(gtex, greedy.Kmax = 10, var.type = 1,
-                          prior.type = "normal.mixture",
-                          ash.param = list(optmethod = "mixSQP"),
-                          verbose.lvl = 0)
-)
-mixIP.time <- system.time(
-  gtex.mixsqp <- flashier(gtex, greedy.Kmax = 10, var.type = 1,
-                          prior.type = "normal.mixture",
-                          verbose.lvl = 0)
-)
-c(mixSQP.time[3], mixIP.time[3])
-```
-
-
+  
+  
 ## Initializing several factors at once
-
+  
 Recall that the default `flashier` method adds factors one at a time, optimizing them individually along the way. One can then do a final backfit to further improve the model fit.
-
+  
 One might instead like to add several factors at once (without optimizing) and then do a single backfit.
-
+  
 ```{r init.EF}
 svd.factors <- svd(gtex, nu = 5, nv = 5)
 EF.init <- list(rep(svd.factors$d[1:5], each = nrow(gtex)) * svd.factors$u,
-                svd.factors$v)
+svd.factors$v)
 svd.time <- system.time(
-  gtex.svd <- flashier(gtex, var.type = 1, EF.init = EF.init, backfit = "only",
-                       verbose.lvl = 0)
+gtex.svd <- flashier(gtex, var.type = 1, EF.init = EF.init, backfit = "only",
+verbose.lvl = 0)
 )
 greedy.time <- system.time(
-  gtex.greedy <- flashier(gtex, greedy.Kmax = 5, var.type = 1, backfit = "final",
-                          verbose.lvl = 0)
+gtex.greedy <- flashier(gtex, greedy.Kmax = 5, var.type = 1, backfit = "final",
+verbose.lvl = 0)
 )
-c(gtex.svd$objective, gtex.greedy$objective)
+c(gtex.svd$elbo, gtex.greedy$elbo)
 c(svd.time[3], greedy.time[3])
 ```
 
@@ -72,17 +50,12 @@ tissues <- colnames(gtex)
 factor3.tissues <- pmatch(c("Whole", "Spleen", "Lung", "Cells_EBV"), tissues)
 factor4.tissues <- pmatch(c("Heart_A", "Heart_L", "Muscle"), tissues)
 factor5.tissues <- pmatch(c("Esophagus_Muc", "Skin_N", "Skin_S"), tissues)
-# Note that it is the complements of these sets that are fixed.
-n.tissues <- ncol(gtex)
-fix.idx <- list(setdiff(1:n.tissues, factor3.tissues),
-                setdiff(1:n.tissues, factor4.tissues),
-                setdiff(1:n.tissues, factor5.tissues))
-fix.vals <- rep(list(0), 3)
-# Column loadings ("dimension 2") rather than rows ("dimension 1") are fixed.
-fix.dim <- rep(list(2), 3)
 
 gtex.fixed <- flashier(gtex, greedy.Kmax = 2, var.type = 1, backfit = "final",
-                       fix.dim = fix.dim, fix.idx = fix.idx, fix.vals = fix.vals)
+                       fixed.factors = fixed.sparse(n = 2,
+                                                    nz.idx = list(factor3.tissues,
+                                                                  factor4.tissues,
+                                                                  factor5.tissues)))
 ```
 
 Note that `greedy.Kmax` does not count fixed factors, so that two "greedy" factors are added on top of the three factors with fixed sparsity patterns. Note also that, by default, `flashier` does not nullcheck the fixed factors (this behavior is set by parameter `nullchk.fixed.factors`).
@@ -93,7 +66,7 @@ The resulting tissue loadings appear as follows.
 library(ggplot2)
 
 plot.tissue.loadings <- function(flash) {
-  vals <- flash$loadings$normalized.loadings[[2]]
+  vals <- flash$loadings.pm[[2]]
   data <- reshape2::melt(vals)
   min.val <- min(0, min(vals))
   max.val <- max(0, max(vals))
@@ -162,7 +135,7 @@ gtex.verbose2 <- flashier(gtex, greedy.Kmax = 2, var.type = 1,
 
 ## Using a different convergence criterion
 
-The default behavior is to iterate until the variational lower bound increases by no more than $np \sqrt{\epsilon}$ (where $\epsilon$ denotes machine epsilon). The convergence criterion is set by the `conv.crit.fn` parameter, and tolerances are set by parameters `greedy.tol`, `backfit.tol` (for the final backfit), and `inner.backfit.tol` (for intermediary backfits). 
+The default behavior is to iterate until the variational lower bound increases by no more than $np \sqrt{\epsilon}$ (where $\epsilon$ denotes machine epsilon). The convergence criterion is set by the `conv.crit.fn` parameter, and tolerances are set by parameters `greedy.tol`, `backfit.reltol` (for the final backfit), and `inner.backfit.reltol` (for intermediary backfits). 
 
 If one is primarily interested in tissue loadings in the `gtex` dataset, then one might like to stop optimization when their normalized absolute values no longer change by more than, say, .001.
 
@@ -197,30 +170,31 @@ To illustrate some of these issues, I fit 3 factors with nonnegative loadings on
 
 ```{r nonneg}
 gtex.nonnegative <- flashier(gtex, greedy.Kmax = 3, var.type = 1,
-                             prior.type = c("normal.mixture", "nonnegative"))
+                             prior.class = c(prior.normal.mix(),
+                                             prior.nonnegative()))
 ```
 
-I ignore the advice given and backfit without warmstarts.
-
-```{r no.warmstarts}
-no.warmstarts.time <- system.time(
-  gtex.no.warmstarts <- flashier(gtex, flash.init = gtex.nonnegative,
-                               backfit = "only")
-)
-```
-
-I relent and re-do the backfit using warmstarts.
+By default, `flashier` backfits using warmstarts.
 
 ```{r warmstarts}
 warmstarts.time <- system.time(
   gtex.warmstarts <- flashier(gtex, flash.init = gtex.nonnegative,
                               backfit = "only", warmstart.backfits = TRUE)
 )
-c(no.warmstarts.time[3], warmstarts.time[3])
-c(gtex.no.warmstarts$objective, gtex.warmstarts$objective)
+```
+
+I can turn warmstarts off as follows. 
+
+```{r no.warmstarts}
+no.warmstarts.time <- system.time(
+  gtex.no.warmstarts <- flashier(gtex, flash.init = gtex.nonnegative,
+                                 backfit = "only", warmstart.backfits = FALSE)
+)
 ```
 
 ```{r warmstart.compare}
+c(no.warmstarts.time[3], warmstarts.time[3])
+c(gtex.no.warmstarts$elbo, gtex.warmstarts$elbo)
 ```
 
 
@@ -228,17 +202,18 @@ c(gtex.no.warmstarts$objective, gtex.warmstarts$objective)
 
 Parameter `output.lvl` determines the form of the returned list. In most cases, the default `output.lvl = 2` will do. The other important setting is `output.lvl = 0`, which causes `flashier` to return a flash fit that is entirely free from post-processing and can be fed directly into subsequent `flashier` calls. This can save time in complex flash fits that involve repeated calls to `flashier`.
 
-As an example, I implement "same-sign" priors. The idea, suggested to me by Matthew Stephens, is to put nonnegative priors on rows and then allow priors on tissues to be either nonnegative or nonpositive. This might be especially useful in nonnegative matrix factorization since it provides a mechanism to correct for mistakes made in factors added early on. (Since later factors can only ever increase the fitted values, it becomes very difficult to correct for an overambitious factor.) This approach makes less sense for the `gtex` matrix of $z$-scores, but it is nonetheless interesting to observe that tissue loadings are very similar regardless of whether they represent positive effects or negative ones.
+As an example, I implement "same-sign" priors. The idea, suggested to me by Matthew Stephens, is to put nonnegative priors on rows and then allow priors on tissues to be either nonnegative or nonpositive. This might be especially useful in nonnegative matrix factorization since it provides a mechanism to correct for "mistakes" made in factors added early on. (Since later factors can only ever increase the fitted values, it becomes very difficult to correct for an overambitious factor.) This approach makes less sense for the `gtex` matrix of $z$-scores, but it is nonetheless interesting to observe that tissue loadings are very similar regardless of whether they represent positive effects or negative ones.
 
 ```{r same.sign}
 greedy.Kmax <- 6
 fit <- NULL
 for (k in 1:greedy.Kmax) {
-  nn.fit <- flashier(gtex, flash.init = fit, greedy.Kmax = k, var.type = 1,
-                     prior.type = c("nonnegative", "nonnegative"),
+  nn.fit <- flashier(gtex, flash.init = fit, greedy.Kmax = 1, var.type = 1,
+                     prior.class = prior.nonnegative(),
                      output.lvl = 0, verbose.lvl = 0)
-  np.fit <- flashier(gtex, flash.init = fit, greedy.Kmax = k, var.type = 1,
-                     prior.type = c("nonnegative", "nonpositive"),
+  np.fit <- flashier(gtex, flash.init = fit, greedy.Kmax = 1, var.type = 1,
+                     prior.class = c(prior.nonnegative(), 
+                                     prior.nonpositive()),
                      output.lvl = 0, verbose.lvl = 0)
   if (nn.fit$obj > np.fit$obj) {
     cat("Nonnegative factor added. Objective: ",
@@ -251,6 +226,6 @@ for (k in 1:greedy.Kmax) {
   }
 }
 # A final call to get a nice "flash" object rather than a "flash.fit" object.
-gtex.same.signs <- flashier(gtex, flash.init = fit, greedy.Kmax = 6)
+gtex.same.signs <- flashier(flash.init = fit, greedy.Kmax = 0)
 plot.tissue.loadings(gtex.same.signs)
 ```
